<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_semester">Add New Semester</string>
    <string name="semesterDetails">Add semester</string>
    <string name="semesterNo">Enter your semester number</string>
    <string name="semesterName">Enter the semester name and other info</string>
    <string name="addSemester">Add</string>
    <string name="cancelSemester">Cancel</string>
    <string name="nameOfSemester">Name</string>
    <string name="semester">Semester</string>
    <string name="title_activity_main">Assignment Tracker</string>
    <string name="instsuction_add">Please press menu button on the upper right corner to add new record.</string>
    <string name="add_semester">Add Semester</string>
    <string name="add_course">Add Course/Project</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="title_activity_add_assignment">Add New Assignment</string>
    <string name="title">Title</string>
    <string name="course">Course</string>
    <string name="due_date">Due Date</string>
    <string name="progress">Progress</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="emailAss">Send As Email</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_update_assignment">Update Assignment</string>
    <string name="title_activity_add_course">Add New Course</string>
    <string name="course_code">Course Code</string>
    <string name="professor">Professor</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="title_activity_show_semesters">Semesters</string>
    <string name="show_semesters">Show All Semesters</string>
    <string name="title_activity_show_courses">Courses</string>
    <string name="show_courses">Show All Courses</string>
    <string name="title_activity_update_course">Update Course</string>
    <string name="title_activity_update_semester">Update Semester</string>
    <string name="Update">Update</string>
    <string name="updateSemester">Update Semester</string>
    <string name="title_activity_splash_screen">Assignment Tracker</string>
    <string name="companyLogo">Company Logo</string>
    <string name="ImA">I am a..</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="title_activity_delete_semester_confirmation">Delete Semester Confirmation</string>
    <string name="title_activity_dev_tools">DevTools</string>
    <string name="devCleanDatabaseText">Clean DB</string>
    <string name="devPopulateDatabase">Populate DB</string>
    <string name="DevPH01">DevPH01</string>
    <string name="DevPH02">DevPH02</string>
    <string name="DevPH03">DevPH03</string>
    <string name="DevPH04">DevPH04</string>
    <string name="DevPH05">DevPH05</string>
    <string name="DevPH06">DevPH06</string>
    <string name="title_activity_add_teacher_course">Add Course</string>
    <string name="title_activity_update_teacher_course">Update Course</string>
    <string name="title_activity_show_teacher_assignments">Assignments</string>
    <string name="show_teacher_assignments">Show All Assignments</string>
    <string name="title_activity_show_course_assignments">Assignments For Selected Course</string>
    <string name="show_progress_report">Assignment Progress Report</string>
    <string name="title_activity_get_email_info">Email Assignment</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="optionalMessage">Optional Message:</string>
    <string name="next">Next</string>
    <string name="title_activity_email_content_to_send">Email Assignment</string>
    <string name="progressReportLabel">Progress Report</string>
    <string name="send">Send</string>
    <string name="assignment_progress_report_assignment_name_text">Assignment Name</string>
    <string name="assignment_progress_report_assignment_course_name">Course Name</string>
    <string name="assignment_progress_report_assignment_progress_bar_title">Assignment Progress</string>
    <string name="assignment_progress_report_assignment_due_on">Due On</string>
    <string name="show_completedass">Completed Assignments</string>
    <string name="title_activity_show_completed_assignments">Completed AssignmentsActivity</string>

</resources>