<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    tools:context=".AssignmentProgressReportActivity" >

    <TextView
        android:id="@+id/assignment_progress_report_assignment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/assignment_progress_report_assignment_name_text" />

    <TextView
        android:id="@+id/assignment_progress_report_assignment_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:text="@string/assignment_progress_report_assignment_course_name"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/assignment_progress_report_assignment_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="6dp" />

    <TextView
        android:id="@+id/assignment_progress_report_assignment_progress_bar_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/assignment_progress_report_assignment_progress_bar_title"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/assignment_progress_report_assignment_due_on"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/assignment_progress_report_assignment_due_on"
        android:textSize="12sp" />

</LinearLayout>