<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.assignmenttracker.DevTools"
    tools:ignore="MergeRootFrame" > 
    
    <Button
        android:id="@+id/devCleanDatabase"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/devCleanDatabaseText" />

    <Button
        android:id="@+id/devPopulateDatabase"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/devCleanDatabase"
        android:layout_toRightOf="@+id/devCleanDatabase"
        android:text="@string/devPopulateDatabase" />

    <Button
        android:id="@+id/btnNext"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/devPopulateDatabase"
        android:layout_alignBottom="@+id/devPopulateDatabase"
        android:layout_toRightOf="@+id/devPopulateDatabase"
        android:text="@string/DevPH01" />
    
</RelativeLayout>

